# carproject

./: .gitignore  .travis.yml  README.md
Matlab Race Line Optimisation/: big_track_iter_1.csv  big_track_iter_2.csv  big_track_iter_3.csv  big_track_iter_4.csv  curvature_qp_compare.m  interparc.m  track1000_minc.csv  track_min_curvature.m
car_remote/: Cargo.toml
car_remote/arduino/stripboard_prototype/: stripboard_prototype.ino
car_remote/src/: lib.rs
python_controller/: readme_update_requirements_txt.txt  requirements.txt  runner.py  track.py  track_voronoi.py  utils.py  visualisation.py
python_controller/controller/: __init__.py  condensedqpbuilder.py  lookaheadproportional.py  mpcpositionvelocity.py  osqpbuilder.py  sparseqpbuilder.py
python_controller/controlmodel/: __init__.py  directvelocity.py  spenglergammeterbicycle.py
python_controller/data/tracks/: 3yp_track2500.csv
python_controller/vehiclemodel/: __init__.py  directvelocity.py  pacejkabicycle.py  spenglergammeterbycicle.py
rust_controller/: .gitignore  Cargo.toml  config.toml  future_work.txt  rustfmt.toml  travis.sh
rust_controller/car_remote/: Cargo.toml
rust_controller/car_remote/arduino/stripboard_prototype/: stripboard_prototype.ino
rust_controller/car_remote/examples/: calibrate.rs  keyboard.rs  mouse.rs  pair.rs  ramp.rs
rust_controller/car_remote/examples/utils/: mod.rs
rust_controller/car_remote/src/: lib.rs
rust_controller/car_tracker/: Cargo.toml  static_test_bg.tiff  static_test_frame_one_car.tiff  static_test_frame_two_cars.tiff  static_test_track_mask.tiff
rust_controller/car_tracker/examples/: track_live.rs  track_static.rs
rust_controller/car_tracker/examples/utils/: mod.rs
rust_controller/car_tracker/libdc1394-sys/: Cargo.toml  build.rs
rust_controller/car_tracker/opencv_wrapper/: Cargo.toml  build.rs
rust_controller/car_tracker/opencv_wrapper/cpp/: CMakeLists.txt  opencv_wrapper.cpp
rust_controller/car_tracker/opencv_wrapper/src/: lib.rs
rust_controller/car_tracker/src/: aligned_buffer.rs  camera.rs  lib.rs  main.rs.bak
rust_controller/car_tracker/tests/: static.rs
rust_controller/config/: Cargo.toml
rust_controller/config/src/: lib.rs
rust_controller/control_model/: Cargo.toml
rust_controller/control_model/src/: combine_state.rs  directvelocity.rs  expm.rs  kinematic_bicycle.rs  lib.rs  no_slip_bicycle.rs  no_slip_point.rs  spengler_gammeter.rs  spenglergammeterbicycle.rs
rust_controller/controller/: Cargo.toml
rust_controller/controller/src/: lib.rs  mpc_base.rs  mpc_distance.rs  mpc_min_time.rs  mpc_position.rs  mpc_raceline.rs  mpc_reference.rs  mpc_time.rs  osqp_mpc_builder.rs
rust_controller/controller_estimator/: Cargo.toml
rust_controller/controller_estimator/src/: config.rs  lib.rs  visualisation.rs
rust_controller/cubic_spline/: Cargo.toml
rust_controller/cubic_spline/src/: lib.rs
rust_controller/data/tracks/: 3yp_track2500.csv  big_track_2500.csv  big_track_2500_raceline.csv  straight.csv
rust_controller/estimator/: Cargo.toml
rust_controller/estimator/src/: ekf.rs  lib.rs  param_least_squares.rs  ukf.rs
rust_controller/online/: Cargo.toml  config.toml  controller.toml
rust_controller/online/src/: main.rs  visualisation.rs
rust_controller/osqp/: Cargo.toml
rust_controller/osqp/src/: lib.rs
rust_controller/osqp_wrapper/: Cargo.toml
rust_controller/osqp_wrapper/src/: lib.rs
rust_controller/prelude/: Cargo.toml
rust_controller/prelude/src/: flame_merge.rs  lib.rs
rust_controller/simulator/: Cargo.toml  config.toml  controller.toml  simulator.toml
rust_controller/simulator/src/: config.rs  main.rs  simulation_model.rs  visualisation.rs
rust_controller/sparse/: Cargo.toml
rust_controller/sparse/src/: erased_into_iter.rs  lib.rs
rust_controller/src/: flame_merge.rs  main.rs  odeint.rs  osqp.rs  prelude.rs  track.rs  visualisation.rs
rust_controller/src/control_model/: combine_state.rs  directvelocity.rs  mod.rs  spenglergammeterbicycle.rs
rust_controller/src/controller/: mod.rs  mpc_base.rs  mpc_position.rs  mpc_time.rs  osqp_mpc_builder.rs
rust_controller/src/estimator/: ekf.rs  mod.rs  param_least_squares.rs
rust_controller/src/param_estimator/: fixed_horizon.rs  mod.rs
rust_controller/src/simulation_model/: mod.rs
rust_controller/src/state_estimator/: ekf.rs  mod.rs
rust_controller/track/: Cargo.toml
rust_controller/track/src/: lib.rs  min_curvature.rs
rust_controller/track/tests/: office_desk_track_2500.csv  track_mask.rs
rust_controller/track_aruco/: Cargo.toml  build.rs
rust_controller/track_aruco/cpp/: CMakeLists.txt  track_aruco.cpp
rust_controller/track_aruco/cxx/: track_aruco.cpp
rust_controller/track_aruco/src/: lib.rs
rust_controller/ui/: Cargo.toml
rust_controller/ui/src/: canvas.rs  colors.rs  lib.rs  plot.rs
rust_controller/visualisation/: Cargo.toml
rust_controller/visualisation/src/: lib.rs
track_model_generator/: Cargo.toml  big_track_2500.csv
track_model_generator/src/: big_track.rs  main.rs  office_desk_track.rs
video/: aruco_sheet_4x4_50_small.avi
vision_c++/: CMakeLists.txt  contour_detection_grayscale_V1.cpp  contour_detection_grayscale_functions.cpp  contour_detection_grayscale_functions_V2.cpp
vision_python/: FlyCapture2Test_DEMO.py  aruco.py  aruco_V2.py  aruco_homography_track_mask_demo.py  aruco_markers.py  car_detection_opencv_background_subtraction.py  contour_detection.py  contour_detection_V2.py  contour_detection_grayscale_V3.py  contour_detection_greyscale.py  contour_detection_greyscale_V2.py  contour_detection_greyscale_V3.py  contour_detection_greyscale_V4.py  contour_detection_greyscale_V5.py  first_test.py  old_detection.py  track.py  tracker.py
vision_python/learning/: testing.py
