[package]
name = "rust_controller"
version = "0.1.0"
authors = ["Edward Barnard <eabarnard@gmail.com>"]

[workspace]

[dependencies]
itertools = "0.7.2"
flame = { git = "https://github.com/TyOverby/flame", rev = "983199a2af26ca1f8c5bdd31115933fef16628fa" }
osqp = "0.0.1-pre.3"
log = "0.4.1"
env_logger = "0.5.3"
streaming-stats = "0.1.28"
sparse = { path = "sparse" }
config = { path = "config" }
control_model = { path = "control_model" }
ui = { path = "ui" }
prelude = { path = "prelude" }
rand = "0.4.2"
track = { path = "track" }
