[package]
name = "car_tracker"
version = "0.1.0"
authors = ["Edward Barnard <eabarnard@gmail.com>"]

[dependencies]
libdc1394-sys = { version = "0.2.0", path = "libdc1394-sys" }
prelude = { path = "../prelude" }
triple_buffer = { version = "2.0.0", features = ["raw"] }

[dev-dependencies]
image = { version = "0.18.0", default-features = false, features = ["tiff"] }
opencv_wrapper = { path = "opencv_wrapper" }
