[package]
name = "car_tracker"
version = "0.1.0"
authors = ["Edward Barnard <eabarnard@gmail.com>"]

[dependencies]
itertools = "0.7.8"
libdc1394-sys = { version = "0.2.0", path = "libdc1394-sys" }
prelude = { path = "../prelude" }
triple_buffer = { version = "2.0.0", features = ["raw"] }

[dev-dependencies]
image = { version = "0.19.0", default-features = false, features = ["tiff"] }
opencv_wrapper = { path = "opencv_wrapper" }
