[package]
name = "controller"
version = "0.1.0"
authors = ["Edward Barnard <eabarnard@gmail.com>"]

[dependencies]
log = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
control_model = { path = "../control_model" }
osqp = { path = "../osqp" }
prelude = { path = "../prelude" }
sparse = { path = "../sparse" }
track = { path = "../track" }
