[package]
name = "online"
version = "0.1.0"
authors = ["Edward Barnard <eabarnard@gmail.com>"]

[dependencies]
env_logger = { version = "0.5.3", default-features = false }
log = "0.4.1"
streaming-stats = "0.1.28"
car_remote = { path = "../car_remote" }
car_tracker = { path = "../car_tracker" }
controller_estimator = { path = "../controller_estimator" }
prelude = { path = "../prelude" }
track = { path = "../track" }
track_aruco = { path = "../track_aruco" }
visualisation = { path = "../visualisation" }
