[package]
name = "simulator"
version = "0.1.0"
authors = ["Edward Barnard <eabarnard@gmail.com>"]

[dependencies]
env_logger = { version = "0.5.3", default-features = false }
log = "0.4.1"
rand = "0.5.3"
serde = "1.0"
serde_derive = "1.0"
streaming-stats = "0.1.28"
toml = "0.4.5"
controller_estimator = { path = "../controller_estimator" }
control_model = { path = "../control_model" }
prelude = { path = "../prelude" }
track = { path = "../track" }
visualisation = { path = "../visualisation" }
