[package]
name = "ui"
version = "0.1.0"
authors = ["Edward Barnard <eabarnard@gmail.com>"]

[dependencies]
glium = "0.20.0"
imgui = { git = "https://github.com/JoNil/imgui-rs", rev = "3321d5a2552a4ee4fb55995268948d14f13c7f58" }
imgui-glium-renderer = { git = "https://github.com/JoNil/imgui-rs", rev = "3321d5a2552a4ee4fb55995268948d14f13c7f58" }
